# PiVisualisator

./: CMakeLists.txt  Data2PixmapAdapter.cpp  Data2PixmapAdapter.hpp  ImageData.cpp  ImageData.hpp  ImageLabel.cpp  ImageLabel.hpp  MainWindow.cpp  MainWindow.hpp  QemuManager.cpp  QemuManager.hpp  Settings.cpp  Settings.hpp  main.cpp
